/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

import "ukama/roles.proto";

package ukama.events.v1;

message EventInvitationCreated {
    string id = 1;
    string link=2;
    string email=3;
    string name = 4;
    ukama.common.v1.RoleType role = 5;
    string status = 6;
    string userId = 7 [json_name = "user_id"];
    string expiresAt = 8 [json_name = "expires_at"];
}

message EventInvitationDeleted {
    string id = 1;
    string email=2;
    string name = 3;
    ukama.common.v1.RoleType role = 4;
    string userId = 5 [json_name = "user_id"];
}

message EventInvitationUpdated {
    string id = 1;
    string link=2;
    string email=3;
    string name = 4;
    ukama.common.v1.RoleType role = 5;
    string status = 6;
    string userId = 7 [json_name = "user_id"];
    string expiresAt = 8 [json_name = "expires_at"];
}